<resources>
    <string name="app_name">ChatApp</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">New Password</string>
    <string name="mobile">Mobile</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="gender">Gender</string>
    <string name="dob">Birthday</string>
    <string name="register">Registration</string>
    <string name="login">Login</string>
    <string name="already_have_account">Already have account,<font color='red'> Login</font></string>
    <string name="not_have_account">No register yet,<font color='red'> Register</font> </string>
    <string name="chat">Chats</string>
    <string name="friends">Friends</string>
    <string name="profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="logout">Logout</string>
    <string name="no_request">No Friends</string>
    <string name="message_hint_text">Type a message....</string>
    <string name="send_msg">Send Message</string>
    <string name="information">Information: </string>
    <string name="group">Group</string>
    <string name="create_a_new_group">Create a new group</string>
    <string name="group_name">Group name</string>
    <string name="next">Next</string>
    <string name="uploadImages">Select option</string>
    <string name="msg_loading">Loading</string>
    <string name="near_by">Near By</string>
    <string name="start_conversion">Start conversion</string>
</resources>
