<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ChatFragment">

    <LinearLayout
        android:id="@+id/profile_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:padding="5dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image_view"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:clickable="true"
            android:background="@drawable/ripple_effect"
            android:contentDescription="@null"
            android:focusable="true"
            android:padding="5dp"
            android:src="@drawable/profile_user" />

        <TextView
            android:id="@+id/name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:textStyle="bold"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            android:text="@string/chat" />
    </LinearLayout>

    <View
        android:id="@+id/shadow"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_below="@id/profile_layout"
        android:background="@drawable/shadow"
        app:layout_anchor="@+id/profile_layout"
        app:layout_anchorGravity="top" />

    <TextView
        android:id="@+id/search_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/shadow"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_shape"
        android:clickable="true"
        android:drawableStart="@drawable/ic_search"
        android:drawableLeft="@drawable/ic_search"
        android:drawablePadding="10dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:padding="10dp"
        android:text="@string/search"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/user_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_text_view"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:reverseLayout="false"
        tools:listitem="@layout/conversion_row_item" />

    <TextView
        android:id="@+id/no_data_found"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/no_request"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />
</RelativeLayout>