<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F8F5F5"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="360dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="@drawable/gradientbackground"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="45dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profile_image_view"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center_horizontal"
                        android:contentDescription="@null"
                        tools:src="@drawable/profile_user" />

                    <ImageButton
                        android:id="@+id/upload_image_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentBottom="true"
                        android:background="@drawable/circle_bg"
                        android:clickable="true"
                        android:contentDescription="@null"
                        android:focusable="true"
                        android:foreground="@drawable/ripple_effect"
                        android:src="@drawable/ic_photo_camera_black_24dp" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/name_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:drawableStart="@drawable/ic_verified"
                    android:drawableLeft="@drawable/ic_verified"
                    android:drawablePadding="10dp"
                    android:textColor="#757474"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    tools:text="Wiliam Snoe" />
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="400dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="250dp"
                android:layout_marginRight="20dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:baselineAligned="true"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <LinearLayout
                        android:id="@+id/friend_layout"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/ripple_effect"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Friends"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/friend_count_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="10dp"
                            android:textColor="#1F978C"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            tools:text="125" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/group_layout"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/ripple_effect"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Groups"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/group_count_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="10dp"
                            android:textColor="#1F978C"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            tools:text="1205" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/email_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:drawableStart="@drawable/ic_email"
                android:drawableLeft="@drawable/ic_email"
                android:drawablePadding="20dp"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingEnd="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp"
                android:textStyle="bold"
                tools:text="@string/first_name" />


            <TextView
                android:id="@+id/mobile_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:drawableStart="@drawable/ic_phone"
                android:drawableLeft="@drawable/ic_phone"
                android:drawablePadding="20dp"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingEnd="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp"
                android:textStyle="bold"
                tools:text="+266 225 225" />


            <TextView
                android:id="@+id/birthday_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:drawableStart="@drawable/ic_calendar"
                android:drawableLeft="@drawable/ic_calendar"
                android:drawablePadding="20dp"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingEnd="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp"
                android:textStyle="bold"
                tools:text="@string/dob" />


        </LinearLayout>

        <Button
            android:id="@+id/logout_btn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20sp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="10dp"
            android:paddingStart="50dp"
            android:paddingTop="10dp"
            android:paddingEnd="50dp"
            android:paddingBottom="10dp"
            android:text="@string/logout"
            android:textSize="20sp" />
    </LinearLayout>
</ScrollView>